<resources>
    <string name="app_name">盐南党建</string>
    <string name="buffering">缓冲中&#8230;</string>
    <string name="find_update_hint">检测到新版本，是否更新？</string>
    <string name="find_update">检测到新版本，请确定更新？</string>
    <string name="start_update_hint">开始下载&#8230;</string>
    <string name="empty_select_hint">请至少选择一个</string>
    <string name="empty_hint">暂无数据可选</string>
    <string name="delete_image_hint">确定要删除图片吗?</string>
    <string name="sex_man">男</string>
    <string name="sex_woman">女</string>
    <string name="main_menu_text_1">党员E家</string>
    <string name="main_menu_text_2">云端先锋</string>
    <string name="main_menu_text_3">服务超市</string>
    <string name="main_menu_text_4">个人中心</string>
    <string name="login_text_1">请输入用户名</string>
    <string name="login_text_2">请输入登录密码</string>
    <string name="login_text_3">立即登录</string>
    <string name="login_text_4">记住密码</string>
    <string name="login_text_51">登录成功</string>
    <string name="login_text_52">登录失败</string>
    <string name="login_text_6">手机号格式不正确</string>
    <string name="main_1_text_11">信息资讯</string>
    <string name="main_1_text_12">组织生活</string>
    <string name="main_1_text_13">在线学习</string>
    <string name="main_1_text_14">交流互动</string>
    <string name="main_1_text_15">党费缴纳</string>
    <string name="main_1_text_21">党建动态</string>
    <string name="main_1_text_22">通知公告</string>
    <string name="main_sub_1_text_1">还没有数据~</string>
    <string name="main_sub_1_text_2">%1$s·%2$s</string>
    <string name="tab1_djdt_detail_text_11">点赞成功</string>
    <string name="tab1_djdt_detail_text_12">点赞失败</string>
    <string name="tab1_djdt_detail_text_13">您已经点赞过了</string>
    <string name="tab1_tzgg_detail_text_11">我要举报</string>
    <string name="tab1_tzgg_detail_text_12">请详细填写，以确保举报能够被受理</string>
    <string name="tab1_tzgg_detail_text_13">发送</string>
    <string name="tab1_tzgg_detail_text_21">举报成功</string>
    <string name="tab1_tzgg_detail_text_22">举报失败</string>
    <string name="tab1_tzgg_detail_text_3">举报内容已提交，请等待回复！</string>
    <string name="tab1_zzsh_text_11">全部活动</string>
    <string name="tab1_zzsh_text_12">我的活动</string>
    <string name="tab1_zzsh_text_31">正在报名</string>
    <string name="tab1_zzsh_text_32">进行中</string>
    <string name="tab1_zzsh_text_33">活动已结束</string>
    <string name="tab1_zzsh_text_4">%1$s/%2$d人</string>
    <string name="tab1_zzsh_detail_title">活动详情</string>
    <string name="tab1_zzsh_detail_text_11">活动名称</string>
    <string name="tab1_zzsh_detail_text_12">开始时间</string>
    <string name="tab1_zzsh_detail_text_13">联系人</string>
    <string name="tab1_zzsh_detail_text_14">活动地点</string>
    <string name="tab1_zzsh_detail_text_15">结束时间</string>
    <string name="tab1_zzsh_detail_text_16">联系方式</string>
    <string name="tab1_zzsh_detail_text_17">详细内容</string>
    <string name="tab1_zzsh_detail_text_21">我要报名</string>
    <string name="tab1_zzsh_detail_text_22">我已报名</string>
    <string name="tab1_zzsh_detail_text_31">报名成功</string>
    <string name="tab1_zzsh_detail_text_32">报名失败</string>
    <string name="tab1_zxxx_text_11">全部学习</string>
    <string name="tab1_zxxx_text_12">我的学习</string>
    <string name="tab1_zxxx_text_21">热门课件</string>
    <string name="tab1_zxxx_text_22">学习排行</string>
    <string name="tab1_zxxx_text_3">在线\n考试</string>
    <string name="tab1_zxxx_text_41">全部</string>
    <string name="tab1_zxxx_text_42">未学习</string>
    <string name="tab1_zxxx_text_43">学习中</string>
    <string name="tab1_zxxx_text_44">已完成</string>
    <string name="tab1_zxxx_detail_title">在线学习</string>
    <string name="tab1_zxxx_detail_text_11">已有%1$s人学习</string>
    <string name="tab1_zxxx_detail_text_12">已学习&#160;:&#160;%1$s</string>
    <string name="tab1_zxxx_detail_text_13">提交心得体会&#160;:&#160;</string>
    <string name="tab1_zxxx_detail_text_14">请输入心得体会！</string>
    <string name="tab1_zxxx_detail_text_21">提交</string>
    <string name="tab1_zxxx_detail_text_22">提交成功</string>
    <string name="tab1_zxxx_detail_text_23">提交失败</string>
    <string name="tab1_zxxx_detail_text_31">开始学习失败</string>
    <string name="tab1_zxxx_detail_text_41">错误的PDF文件</string>
    <string name="tab1_zxxx_sub_text_11">学习时长&#160;:&#160;%1$d分钟</string>
    <string name="tab1_zxxx_sub_text_12">已有%1$s人学习</string>
    <string name="tab1_zxxx_sub_text_21">未学习</string>
    <string name="tab1_zxxx_sub_text_22">学习中</string>
    <string name="tab1_zxxx_sub_text_23">已学习</string>
    <string name="tab1_zxxx_sub_text_31">未学习</string>
    <string name="tab1_zxxx_sub_text_32">未完成</string>
    <string name="tab1_zxxx_sub_text_33">已完成</string>
    <string name="tab1_rmkj_text_11">发布时间&#160;:&#160;%1$s</string>
    <string name="tab1_rmkj_text_12">已有%1$s人学习</string>
    <string name="tab1_jlhd_text_11">互动评论</string>
    <string name="tab1_jlhd_text_12">在线投票</string>
    <string name="tab1_jlhd_text_13">在线咨询</string>
    <string name="tab1_jlhd_text_2">立刻进入</string>
    <string name="tab1_zxtp_text_11">进行中</string>
    <string name="tab1_zxtp_text_12">已结束</string>
    <string name="tab1_zxtp_text_21">%1$s-%2$s</string>
    <string name="tab1_zxtp_text_22">已有%1$s人参与</string>
    <string name="tab1_zxtp_detail_text_11">参与人数</string>
    <string name="tab1_zxtp_detail_text_12">投票截止时间&#160;:&#160;%1$s</string>
    <string name="tab1_zxtp_detail_text_13">投票</string>
    <string name="tab1_zxtp_detail_text_14">投票已结束</string>
    <string name="tab1_zxtp_detail_text_15">您已投票</string>
    <string name="tab1_zxtp_detail_text_21">投票失败</string>
    <string name="tab1_zxtp_detail_text_22">您已投票成功！</string>
    <string name="tab1_zxtp_detail_text_23">好的</string>
    <string name="tab1_zxtp_detail_text_31">&#160;|&#160;%1$s票</string>
    <string name="tab1_zxtp_detail_text_41">您还没有选择</string>
    <string name="tab1_hdpl_detail_text_11">写评论</string>
    <string name="tab1_hdpl_detail_text_12">发表</string>
    <string name="tab1_hdpl_detail_text_13">请填写评论</string>
    <string name="tab1_hdpl_detail_text_21">评论成功</string>
    <string name="tab1_hdpl_detail_text_22">评论失败</string>
    <string name="tab1_hdpl_detail_reply_text_11">回复</string>
    <string name="tab1_hdpl_detail_reply_text_12">全部%1$s条回复></string>
    <string name="tab1_hdpl_detail_reply_detail_title">评论详情</string>
    <string name="tab1_hdpl_detail_reply_detail_text_11">回复&#160;%1$s&#160;:</string>
    <string name="tab1_hdpl_detail_reply_detail_text_12">%1$s&#160;回复&#160;%2$s</string>
    <string name="tab1_hdpl_detail_reply_detail_text_13">请填写回复内容</string>
    <string name="tab1_hdpl_detail_reply_detail_text_21">回复成功</string>
    <string name="tab1_hdpl_detail_reply_detail_text_22">回复失败</string>
    <string name="tab1_wdjb_text_title">我的举报</string>
    <string name="tab1_wdjb_text_1">举报时间&#160;:&#160;%1$s</string>
    <string name="tab1_wdjb_text_21">已回复</string>
    <string name="tab1_wdjb_text_22">未回复</string>
    <string name="tab1_wdjb_detail_text_11">举报&#160;:&#160;</string>
    <string name="tab1_wdjb_detail_text_21">回复</string>
    <string name="tab1_wdjb_detail_text_22">回复成功</string>
    <string name="tab1_wdjb_detail_text_23">回复失败</string>
    <string name="tab1_rmkj_title">&#160;热门课件</string>
    <string name="tab1_rmkj_text_1">点击学习</string>
    <string name="tab1_zxks_title">在线考试</string>
    <string name="tab1_zxks_text_11">题数:%1$d题</string>
    <string name="tab1_zxks_text_12">时长:%1$d分钟</string>
    <string name="tab1_zxks_text_21">全部考试</string>
    <string name="tab1_zxks_text_22">待考试</string>
    <string name="tab1_zxks_text_23">已考试</string>
    <string name="tab1_zxks_detail_text_11">提示&#160;:&#160;</string>
    <string name="tab1_zxks_detail_text_12">考试时间%1$d分钟，已考时间&#160;:&#160;%2$s</string>
    <string name="tab1_zxks_detail_text_131">%1$s单选题(每题%2$d分，共%3$d分)</string>
    <string name="tab1_zxks_detail_text_132">%1$s多选题(每题%2$d分，共%3$d分)</string>
    <string name="tab1_zxks_detail_text_133">%1$s判断题(每题%2$d分，共%3$d分)</string>
    <string name="tab1_zxks_detail_text_134">一、</string>
    <string name="tab1_zxks_detail_text_135">二、</string>
    <string name="tab1_zxks_detail_text_136">三、</string>
    <string name="tab1_zxks_detail_text_137">%1$s填空题(每题%2$d分，共%3$d分)</string>
    <string name="tab1_zxks_detail_text_138">四、</string>
    <string name="tab1_zxks_detail_text_14">已做(&#160;%1$s&#160;)/总题(&#160;%2$d&#160;)</string>
    <string name="tab1_zxks_detail_text_21">交卷</string>
    <string name="tab1_zxks_detail_text_22">上一题</string>
    <string name="tab1_zxks_detail_text_23">下一题</string>
    <string name="tab1_zxks_detail_text_31">已经是第一题了</string>
    <string name="tab1_zxks_detail_text_32">已经是最后一题了</string>
    <string name="tab1_zxks_detail_text_33">操作失败</string>
    <string name="tab1_zxks_detail_text_41">%1$s.%2$s</string>
    <string name="tab1_zxks_detail_text_51">交卷成功</string>
    <string name="tab1_zxks_detail_text_52">交卷失败</string>
    <string name="tab1_zxks_detail_text_61">很抱歉，考试时间已到！</string>
    <string name="tab1_zxks_detail_text_71">请输入答案</string>
    <string name="tab1_zxks_finish_text_11">错题(&#160;%1$s&#160;)/总题(&#160;%2$d&#160;)</string>
    <string name="tab1_zxks_finish_text_21">选择答案&#160;:&#160;%1$s</string>
    <string name="tab1_zxks_finish_text_22">正确答案&#160;:&#160;%1$s</string>
    <string name="tab1_zxks_finish_text_23">答题答案&#160;:&#160;%1$s</string>
    <string name="tab1_wdks_title">我的考试</string>
    <string name="tab1_wdks_text_11">已做%1$s题/共%2$s题</string>
    <string name="tab1_wdks_text_12">用时%1$d分钟</string>
    <string name="tab1_kscj_title">考试成绩</string>
    <string name="tab1_kscj_text_11">我的成绩</string>
    <string name="tab1_kscj_text_12">分</string>
    <string name="tab1_kscj_text_13">考试成绩详情</string>
    <string name="tab1_kscj_text_14">单选题</string>
    <string name="tab1_kscj_text_15">共%1$s题，答对%2$s题，正确率%3$s</string>
    <string name="tab1_kscj_text_16">多选题</string>
    <string name="tab1_kscj_text_17">判断题</string>
    <string name="tab1_kscj_text_2">查看考卷</string>
    <string name="tab1_xxph_title">学习排行</string>
    <string name="tab1_xxph_text_11">第</string>
    <string name="tab1_xxph_text_12">名</string>
    <string name="tab1_xxph_text_13">总计</string>
    <string name="tab1_xxph_text_14">小时</string>
    <string name="tab1_xxph_text_21">党组织&#160;:&#160;%1$s</string>
    <string name="tab1_xxph_text_22">小时</string>
    <string name="tab1_zxzx_detail_text_11">回复</string>
    <string name="tab1_zxzx_add_text_11">主&#160;&#160;&#160;&#160;&#160;&#160;&#160;题&#160;:&#160;</string>
    <string name="tab2_zyfw_add_text_11">活动名称</string>
    <string name="tab2_zyfw_add_text_12">请输入活动名称</string>
    <string name="tab2_zyfw_add_text_21">活动开始时间</string>
    <string name="tab2_zyfw_add_text_22">请选择开始时间</string>
    <string name="tab2_zyfw_add_text_31">活动结束时间</string>
    <string name="tab2_zyfw_add_text_32">请选择结束时间</string>
    <string name="tab2_zyfw_add_text_41">活动参与范围</string>
    <string name="tab2_zyfw_add_text_42">请选择参与范围</string>
    <string name="tab2_zyfw_add_text_51">活动服务类型</string>
    <string name="tab2_zyfw_add_text_52">请选择服务类型</string>
    <string name="tab2_zyfw_add_text_61">需求人数</string>
    <string name="tab2_zyfw_add_text_62">请输入人数</string>
    <string name="tab2_zyfw_add_text_71">联系人</string>
    <string name="tab2_zyfw_add_text_72">请输入联系人姓名</string>
    <string name="tab2_zyfw_add_text_81">联系方式</string>
    <string name="tab2_zyfw_add_text_82">请输入联系方式</string>
    <string name="tab2_zyfw_add_text_101">活动地点</string>
    <string name="tab2_zyfw_add_text_102">请输入活动地点</string>
    <string name="tab2_zyfw_add_text_111">活动内容</string>
    <string name="tab2_zyfw_add_text_112">请输入活动内容</string>
    <string name="tab2_zyfw_add_text_121">上传图片</string>
    <string name="tab2_zyfw_add_text_122">(可上传一张与活动主题相关的图片)</string>
    <string name="tab2_zyfw_add_text_131">提交</string>
    <string name="tab2_jfdh_detail_text_21">恭喜，您已兑换成功！</string>
    <string name="tab2_jfdh_detail_text_22">请到服务中心进行领取。</string>
    <string name="tab2_jfdh_detail_text_23">共消耗积分%1$s积分</string>
    <string name="tab2_jfdh_detail_text_24">查看我的兑换</string>
</resources>